--- a/infra/Cross-Stack/cloudformation/03_load-balancer.yml
+++ b/infra/Cross-Stack/cloudformation/03_load-balancer.yml
@@ -1,16 +1,10 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: This create a public facing load-balancer.
-Parameters:
-  EnvironmentName:
+Parameters: 
+  EnvironmentName: 
     Type: String
     Default: Demo1
     Description: Name of the environment.
-  VPCId:
-    Type: String
-  PublicSubnetOne:
-    Type: String
-  PublicSubnetTwo:
-    Type: String
 
 Resources:
   # Load balancers for getting traffic to containers.
@@ -19,11 +13,13 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Access to the public facing load balancer
-      VpcId: !Ref 'VPCId'
+      VpcId: 
+        Fn::ImportValue:
+          !Join [ ':', [ !Ref EnvironmentName, 'VPCId' ] ]
       SecurityGroupIngress:
-        # Allow access to ALB from anywhere on the internet
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: -1
+          # Allow access to ALB from anywhere on the internet
+          - CidrIp: 0.0.0.0/0
+            IpProtocol: -1
   PublicLoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
@@ -34,8 +30,10 @@ Resources:
       Subnets:
         # The load balancer is placed into the public subnets, so that traffic
         # from the internet can reach the load balancer directly via the internet gateway
-        - !Ref 'PublicSubnetOne'
-        - !Ref 'PublicSubnetTwo'
+        - Fn::ImportValue:
+            !Join [ ':', [ !Ref EnvironmentName, 'PublicSubnetOne' ] ]
+        - Fn::ImportValue:
+            !Join [ ':', [ !Ref EnvironmentName, 'PublicSubnetTwo' ] ]
       SecurityGroups: [!Ref 'PublicLoadBalancerSG']
   # A dummy target group is used to setup the ALB to just drop traffic
   # initially, before any real service target groups have been added.
@@ -51,7 +49,9 @@ Resources:
       Port: 80
       Protocol: HTTP
       UnhealthyThresholdCount: 2
-      VpcId: !Ref 'VPCId'
+      VpcId: 
+        Fn::ImportValue:
+          !Join [ ':', [ !Ref EnvironmentName, 'VPCId' ] ]      
   PublicLoadBalancerListener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     DependsOn:
@@ -67,9 +67,15 @@ Outputs:
   ExternalUrl:
     Description: The url of the external load balancer
     Value: !Join ['', ['http://', !GetAtt 'PublicLoadBalancer.DNSName']]
+    Export:
+      Name: !Join [ ':', [ !Ref EnvironmentName, 'ExternalUrl' ] ]     
   PublicLoadBalancerListener:
     Description: PublicLoadBalancerListener
     Value: !Ref 'PublicLoadBalancerListener'
+    Export:
+      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicLoadBalancerListener' ] ]        
   PublicLoadBalancerSG:
-    Description: The ARN of the Public Load balancer SG
+    Description: The ARN of the Publiv Loabbalancer SG
     Value: !Ref 'PublicLoadBalancerSG'
+    Export:
+      Name: !Join [':', [!Ref 'EnvironmentName', 'PublicLoadBalancerSG']]      
