--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,7 @@ services:
       - REDIS_PORT=6379
       - NODE_ENV=development
       - PORT=5000
+      - ELASTICACHE_ENDPOINT=redis-server
+      - ELASTICACHE_PORT=6379
     expose:
       - 5000
