--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
   "dependencies": {
     "async-redis": "^1.1.7",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^3.23.3",
-    "http-errors": "^1.8.0",
     "redis": "^3.0.2",
     "winston": "^3.3.3"
   },
